# PiFire-Android

./: .gitignore  LICENSE  README.md  build.gradle  build.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts
app/: .gitignore  CMakeLists.txt  build.gradle  build.gradle.kts  proguard-rules.pro  update-check.json
app/schemas/com.weberbox.pifire.database.RecipeDatabase/: 1.json
app/src/compile/: secrets.gradle
app/src/compile/cpp/: CMakeLists.txt  native-lib.cpp
app/src/compile/res/values/: defaults.xml
app/src/firebase/: AndroidManifest.xml
app/src/firebase/res/menu/: activity_setup_steps.xml
app/src/firebase/res/navigation/: nav_setup_graph.xml
app/src/inapp/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: changelog.json  config_app_update.json  config_feature_support.json  config_server_support.json
app/src/main/res/anim/: anim_fan.xml  anim_output.xml  fall_down.xml  fall_down_animation.xml  mode_pulse.xml  slide_in_left.xml  slide_in_right.xml  slide_out_left.xml  slide_out_right.xml  slide_up.xml  slide_up_animation.xml
app/src/main/res/animator/: fragment_fade_enter.xml  fragment_fade_exit.xml
app/src/main/res/color/: dialog_button_color.xml  dialog_negative_button_text_color.xml  dialog_positive_button_color.xml  dialog_positive_button_color_grey.xml  dialog_positive_button_color_red.xml  dialog_positive_button_text_color.xml  selector_stroke_color.xml
app/src/main/res/drawable/: bg_alert_dialog.xml  bg_alerter_button_accent.xml  bg_blue_button.xml  (+155 more)
app/src/updater/: AndroidManifest.xml
(+1217 files in other folders)
